derive/tests/snapshots/creation_default/Branch/get_all_branches.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `branch` table.
    pub fn get_all_branches<'a>(&'a self) -> impl Iterator<Item = Branch> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().branch().iter()
    }
}
