derive/tests/snapshots/creation_default/Branch/get_branch_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Branch` from the `branch` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_branch_by_id<'a>(
        &'a self,
        id: impl Into<BranchId> + Clone,
    ) -> Result<Branch, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().branch().id().find(id.clone().into().value()) {
            Some(branch) => Ok(branch),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "branch".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Branch` from the `branch` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_branch_by_id<'a>(
        &'a self,
        id: impl Into<BranchId> + Clone,
    ) -> Result<Branch, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().branch().id().find(id.clone().into().value()) {
            Some(branch) => Ok(branch),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "branch".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
